# AutoPetFeeder

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  diagram.drawio  motor.cpp  petFeeder.pptx  ult.h  weight.cpp
codes/: CMakeLists.txt  main.cpp  motor.h  test.cpp  ult.cpp  weight.h
codes/lib/: distance.cpp  distance.h  motor.cpp  motor.h  weight.cpp  weight.h
codes/src/: CMakeLists.txt  main.cpp
unittest/motor_test/: motor.cpp  motor.h  motor_test.cpp
unittest/ult_test/: ult.cpp  ult.h  ult_test.cpp
unittest/weight_test/: weight.cpp  weight.h  weight_test.cpp
